--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "vite": "https://esm.sh/vite@^7.2.7",
-    "recharts": "https://esm.sh/recharts@^3.5.1"
+    "recharts": "https://esm.sh/recharts@^3.5.1",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
