--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
     "vite": "https://esm.sh/vite@^7.2.7",
     "recharts": "https://esm.sh/recharts@^3.5.1",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/"
+    "firebase/": "https://esm.sh/firebase@^12.7.0/",
+    "chrono-node": "https://esm.sh/chrono-node@^2.9.0",
+    "uuid": "https://esm.sh/uuid@^13.0.0"
   }
 }
 </script>
